# PACHA

./: .gitignore  LICENSE  LICENSE.md  MERGING_REFACTORING_PLAN.md  README.md  TESTING_TODO.md  TODO_PACKAGE_INSTALLATION.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: generate-wiki.yml
notebooks/: pacha_tryout.ipynb  spp_correction_notebook.ipynb
notebooks/kmean_models/: k_means_model_20240801_110831.pkl
pacha/: __init__.py  core.py  correction.py  data.py  validation.py
pacha/L1_processing/: __init__.py  common.py  radar.py
pacha/L2_processing/: __init__.py  daily_accumulation.py  radar.py
pacha/L3_processing/: __init__.py  regrid.py  spatial_interpolation.py
pacha/analysis/: __init__.py  data_extraction.py
pacha/data_sources/: __init__.py  cml_readers.py  gauges_funceme_csv.py  gauges_meteofrance.py  pyart_loaders.py  radar_loaders.py  satellite_loaders.py
pacha/merging/: __init__.py  quantile_matching.py
pacha/utils/: __init__.py  file_utils.py  geospatial.py  instruments.py  metrics.py  ml_utils.py  scores.py  temporal.py  visualisation.py
pacha/visualisation/: __init__.py  geospatial.py  statistical.py
scripts/: generate_wiki.py
tests/: __init__.py  test_core.py  test_correction.py  test_daily_accumulation.py  test_generate_wiki.py  test_pacha.py  test_validation.py
